--- a/PortsAndAdaptersExample.csproj
+++ b/PortsAndAdaptersExample.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>Ports_and_Adapters_example</RootNamespace>
+    <RootNamespace>PortsAndAdaptersExample</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
