--- a/PortsAndAdaptersExample.Tests/PortsAndAdaptersExample.Tests.csproj
+++ b/PortsAndAdaptersExample.Tests/PortsAndAdaptersExample.Tests.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PortsAndAdaptersExample\PortsAndAdaptersExample.csproj" />
+  </ItemGroup>
+
 </Project>
